[package]
name = "drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flo_draw = "0.3.1"
rustfft = "6.1.0"
flo_canvas = "0.3.1"
rand = "0.8.5"

[[bin]]
name = "fourier"
path = "src/fourier.rs"
[[bin]]
name = "draw"
path = "src/draw.rs"
